st/mesa: add format table entry for GL_RGB9_E5

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=37839